adding dive buddy post

--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
                                                                 ODIGTML Dive Planning Guides</a>
                                                 </li>
 
+                                                <li><a href="articles\theBadDiveBuddy.html">&nbsp;
+                                                                Be a good dive buddy - revisited</a>
+                                                </li>
+
                                         </div>
 
 
