adding lake diving skill post

--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
                                                                 Gas Laws for Divers - one more time</a>
                                                 </li>
 
+                                                <li><a href="articles\tryLakeDivingToEnhanceSkills.html">&nbsp;
+                                                                Embrace Lake Diving To Enhance Key Dive Skills</a>
+                                                </li>
+
                                         </div>
 
 
