adding technical presentation

--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
                                                                 &nbsp;&nbsp;&nbsp;(caution-work in progress, under
                                                                 construction)</span></a>
                                         </li>
+                                        <li><a href="articles/pressureTheoryPresentation.html"> <span
+                                                                style="color:green;">
+                                                                Theory - Pressure, getting technical </span></a>
+                                        </li>
                                 </ul>
                         </nav>
 
