adding our first Sept blog entry - breathing molecules of air

--- a/index.html
+++ b/index.html
@@ -255,6 +255,13 @@
 
                                         </div>
 
+                                        <!-- beginning of a SEPT 25 monthy post set -->
+                                        <button class="accordion">Sept 2025</button>
+                                        <div class="panel">
+                                                <li><a href="articles\diversBreatheMolecules.html">&nbsp;
+                                                                Breating Molecules of Air</a>
+                                                </li>
+                                        </div>
 
                                         <hr style=" margin:30px;">
 
